# sudoku-solver

./: Cargo.toml
data/: test.json  test1.json
src/: example.rs  lib.rs  main.rs  model.rs  solver.rs  vec2.rs
src/model/: constraint.rs  region.rs
sudoku-solver-frontend/: Cargo.toml
sudoku-solver-frontend/src/: grid.rs  main.rs  region.rs
sudoku-solver-frontend/src/grid/: constraint.rs  menu.rs  selection.rs
