[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.23", features = ["derive"] }
glam = { version = "0.29.2", features = ["serde"] }
num = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[workspace]
members = [
    "sudoku-solver-frontend",
]

[profile.dev.package."*"]
opt-level = 3
